--- a/index.html
+++ b/index.html
@@ -6,18 +6,53 @@
     <title>guam</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1>Guam Trip</h1>
+    </header>
     <main>
       <div class="mv"></div>
+      <h2 class="main-visual-text">memories</h2>
       <div class="main-visual-content">
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
-        <div class="box5"></div>
-        <div class="box6"></div>
-        <div class="box7"></div>
-        <div class="box8"></div>
+        <div class="box">
+          <div class="box1-image"></div>
+          <h3>title</h3>
+          <p></p>
+        </div>
+        <div class="box">
+          <div class="box2-image"></div>
+          <h3>title</h3>
+          <p></p>
+        </div>
+        <div class="box">
+          <div class="box3-image"></div>
+          <h3>title</h3>
+          <p></p>
+        </div>
+        <div class="box">
+          <div class="box4-image"></div>
+          <h3>title</h3>
+          <p></p>
+        </div>
+        <div class="box">
+          <div class="box5-image"></div>
+          <h3>title</h3>
+          <p></p>
+        </div>
+        <div class="box">
+          <div class="box6-image"></div>
+          <h3>title</h3>
+          <p></p>
+        </div>
+        <div class="box">
+          <div class="box7-image"></div>
+          <h3>title</h3>
+          <p></p>
+        </div>
+        <div class="box">
+          <div class="box8-image"></div>
+          <h3>title</h3>
+          <p></p>
+        </div>
       </div>
     </main>
     <footer></footer>
