--- a/index.html
+++ b/index.html
@@ -2,59 +2,92 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://kit.fontawesome.com/4a4fca51eb.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <title>guam</title>
   </head>
   <body>
     <header>
-      <h1>Guam Trip</h1>
+      <h1>Insidious Corps</h1>
     </header>
-    <main>
-      <div class="mv"></div>
-      <h2 class="main-visual-text">memories</h2>
+    <div class="mv">
       <div class="main-visual-content">
-        <div class="box">
-          <div class="box1-image"></div>
-          <h3>title</h3>
-          <p></p>
+        <p class="main-visual-text">
+          Calvin Klein bro Kaji
+          <br>
+          Hokuto Warriors
+          <br>
+          Assassin Sniper Matsuoka
+          <br>
+          Nitta
+        </p>
+      </div>
+    </div>
+    <main>
+      <div class="blog">
+        <div class="big-box">
+          <h2>memories</h2>
+          <div class="box">
+            <div class="box1-image"></div>
+            <h3 class="blog-box-text">Guam Premium Outlet</h3>
+            <p></p>
+          </div>
+          <div class="box">
+            <div class="box2-image"></div>
+            <h3 class="blog-box-text">F rank collage students</h3>
+            <p></p>
+          </div>
+          <div class="box">
+            <div class="box3-image"></div>
+            <h3 class="blog-box-text">Tumon Trade Center</h3>
+            <p></p>
+          </div>
+          <div class="box">
+            <div class="box4-image"></div>
+            <h3 class="blog-box-text">Fish Eye</h3>
+            <p></p>
+          </div>
+
+          <div class="box">
+            <div class="box5-image"></div>
+            <h3 class="blog-box-text">FIZZ&CO.</h3>
+            <p></p>
+          </div>
         </div>
-        <div class="box">
-          <div class="box2-image"></div>
-          <h3>title</h3>
-          <p></p>
+      </div>
+      <div class="side-bar">
+        <div class="Date">
+          <h2>Date</h2>
+          <p class="date-text">2017</p>
+          <p class="date-text">2018</p>
+          <p class="date-text">2019</p>
+          <p class="date-text">2020</p>
+          <p class="date-text">2021</p>
         </div>
-        <div class="box">
-          <div class="box3-image"></div>
-          <h3>title</h3>
-          <p></p>
-        </div>
-        <div class="box">
-          <div class="box4-image"></div>
-          <h3>title</h3>
-          <p></p>
-        </div>
-        <div class="box">
-          <div class="box5-image"></div>
-          <h3>title</h3>
-          <p></p>
-        </div>
-        <div class="box">
-          <div class="box6-image"></div>
-          <h3>title</h3>
-          <p></p>
-        </div>
-        <div class="box">
-          <div class="box7-image"></div>
-          <h3>title</h3>
-          <p></p>
-        </div>
-        <div class="box">
-          <div class="box8-image"></div>
-          <h3>title</h3>
-          <p></p>
+      <div class="Latest-news">
+        <h2>Latest News</h2>
+        <li class="news-text">Unko chinchin oppai kintama Anal </li>
+        <li class="news-text">Nitta can't graduate college.<br> He despaired</li>
+        <li class="news-text">Hokuto is party people.<br>He ate women</li>
+        <li class="news-text">Matsumura's penis became adult.<br>He is not "Hokei"</li>
+        <li class="news-text">Kaji's nickname became <br> "Anal Facker".</li>
+      </div>
+      <div class="Instagram">
+        <h2>Image Index</h2>
+        <div class="instagram-box">
+          <div class="instagram-img"></div>
+          <div class="instagram-img"></div>
+          <div class="instagram-img"></div>
+          <div class="instagram-img"></div>
+          <div class="instagram-img"></div>
+          <div class="instagram-img"></div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <h3 class="footer-text">Yuki Kaji</h3>
+    </footer>
   </body>
 </html>
